# physbeh

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  setup.py  start_guide.ipynb
.github/: dependabot.yml
.github/docker/linux/: Dockerfile.linux
.github/docker/windows/: .gitignore  Dockerfile.windows  README.md  docker-compose.yml
.github/docker/windows/scripts/: Install-Choco.ps1  install-opengl.ps1  start.ps1
.github/workflows/: build_docs.yml  check_commit_flags.yml  linting.yml  run_workflows.yml  testing.yml
docs/source/: conf.py  index.rst
docs/source/_static/: versions.json
docs/source/api/: index.rst  modules.rst  tracking_physmed.gui.rst  tracking_physmed.plotting.rst  tracking_physmed.rst  tracking_physmed.tracking.rst  tracking_physmed.utils.rst
docs/source/changes/: 0.1.0.rst  latest.rst  whats_new.rst
examples/: README.txt  plot_anim_1d.py  plot_animation.py  plot_behavior.py
examples/data/: sub-rat75_ses-20220524_task-openfield_tracksys-DLC_acq-slice32_channels.tsv  sub-rat75_ses-20220524_task-openfield_tracksys-DLC_acq-slice32_motion.json  sub-rat75_ses-20220524_task-openfield_tracksys-DLC_acq-slice32_video.json
maint_tools/: bump_version.ps1  bump_version.sh
src/physbeh/: __init__.py  conftest.py
src/physbeh/arena/: base.py  rectangle.py
src/physbeh/io/tests/: test_files.py
src/physbeh/io/tests/data/: sub-rat2306_ses-20210727_task-openfield_tracksys-DLC_channels.tsv  sub-rat2306_ses-20210727_task-openfield_tracksys-DLC_video.json
src/physbeh/plotting/: __init__.py  animate2d_decorator.py  animate_decorator.py  figure.py  plotting.py
src/physbeh/plotting/tests/: test_plotting.py
src/physbeh/tracking/: tracking.py
src/physbeh/tracking/tests/: test_tracking.py
src/physbeh/utils/: utils.py
src/tracking_physmed/: __init__.py  conftest.py
src/tracking_physmed/arena/: __init__.py  base.py  rectangle.py
src/tracking_physmed/gui/: get_corners.py  manual_relabel.py
src/tracking_physmed/io/: files.py
src/tracking_physmed/io/tests/: test_files.py
src/tracking_physmed/io/tests/data/: sub-rat2306_ses-20210727_task-openfield_tracksys-DLC_channels.json  sub-rat2306_ses-20210727_task-openfield_tracksys-DLC_motion.json
src/tracking_physmed/plotting/: __init__.py  animate2d_decorator.py  animate_decorator.py  animate_plot_fUS.py  plotting.py
src/tracking_physmed/plotting/tests/: test_plotting.py
src/tracking_physmed/tracking/: __init__.py  tracking.py
src/tracking_physmed/tracking/test/: test_tracking.py
src/tracking_physmed/tracking/tests/: test_tracking.py
src/tracking_physmed/utils/: __init__.py  parallel.py  place_fields.py  utils.py
tests/: test_tracking_physmed.py
tests/example_data/sub-rat2306/ses-20210727/beh/: sub-rat2306_ses-20210727_type-exp_tracking-meta_beh.pickle
tracking_physmed/: __init__.py
tracking_physmed/gui/: __init__.py  get_corners.py  manual_relabel.py
tracking_physmed/io/: files.py
tracking_physmed/plotting/: __init__.py  animate2d_decorator.py  animate_decorator.py  animate_plot_fUS.py  plotting.py
tracking_physmed/tracking/: __init__.py  animate2d_decorator.py  animate_decorator.py  animate_plot_fUS.py  plotting.py  tracking.py
tracking_physmed/utils/: __init__.py  place_fields.py  utils.py
