[project]
name = "tracking_physmed"
version = "0.1.0.dev"
description = "Miscellaneous functions for tracking analysis in Python using DeepLabCut at Physics for Medicine"
authors = [
    {name = "Felipe Cybis Pereira", email="felipe.cybispereira@gmail.com"}
]
requires-python = ">=3.9,<3.13" 
readme = "README.md"
dependencies = [
    "numpy~=1.26.4",
    "pandas~=2.2.1",
    "ruamel-yaml~=0.18.6",
    "tables~=3.9.2",
    "matplotlib~=3.8.3",
    "opencv-python-headless~=4.9.0.80",
    "scipy~=1.12",
    "ipympl~=0.9.3",
    "polars~=0.20.15",
    "pyarrow~=16.0",
    "tqdm~=4.66.2",
    "pint-pandas~=0.5",
    "pandas-stubs~=2.2.2.240514",
]

[project.optional-dependencies]
all = ["tracking_physmed[docs,test,dev]"]
docs = [
    "numpydoc~=1.6.0",
    "sphinx~=7.2.6",
    "sphinx-copybutton~=0.5.2",
    "sphinx-design~=0.5.0",
]
test = [
    "pytest~=8.0.2",
]
dev = [
    "ipykernel~=6.29.3",
    "ruff~=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
