[project]
name = "tracking_physmed"
version = "0.1.0.dev"
description = "Miscellaneous functions for tracking analysis in Python using DeepLabCut at Physics for Medicine"
authors = [
    {name = "Felipe Cybis Pereira", email="felipe.cybispereira@gmail.com"}
]
requires-python = ">=3.10, <3.13" 
readme = "README.md"
dependencies = [
    "numpy~=1.26.4",
    "pandas~=2.2.1",
    "ruamel-yaml~=0.18.6",
    "tables~=3.9.2",
    "matplotlib~=3.8.3",
    "opencv-python-headless~=4.9.0.80",
    "scipy~=1.12",
    "ipympl~=0.9.3",
    "pyarrow~=17.0",
    "tqdm~=4.66.2",
    "pint-pandas~=0.5",
    "pandas-stubs~=2.2.2.240514",
    "joblib~=1.4.2",
]

[project.optional-dependencies]
all = ["tracking_physmed[docs,test,dev]"]
docs = [
    "numpydoc~=1.7.0",
    "sphinx~=7.2.6",
    "sphinx-copybutton~=0.5.2",
    "sphinx-design~=0.5.0",
    "pydata-sphinx-theme~=0.14",
]
test = [
    "pytest~=8.0.2",
]
dev = [
    "ipykernel~=6.29.3",
    "ruff~=0.3.0",
    "pre-commit",
]

[tool.ruff]
# Always generate Python 3.10-compatible code.
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
# Enable the pycodestyle error and warnings (`E`, `W`) rules, Pyflakes (`F`) rules,
# McCabe complexity (`C901`) rule, isort (`I`) rules for importing, pyupgrade (`UP`)
# rules.
select = ["E", "F", "W", "I", "UP"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.numpydoc_validation]
exclude = [ # don't report on objects that match any of these regex
    '\.__init__$',
    # Ignore anything that's private (e.g., starts with _)
    '\._.*$',
]
checks = [
    "all",  # report on all checks, except the below
    "GL01",
    "ES01",
    "SA01",
    "EX01",
]
numpydoc_validation_checks = ["all", "GL01", "ES01", "SA01", "EX01"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
