[project]
name = "physbeh"
version = "0.2.0.dev"
description = "Miscellaneous functions for tracking analysis in Python using DeepLabCut at Physics for Medicine"
authors = [
    {name = "Felipe Cybis Pereira", email="felipe.cybispereira@gmail.com"}
]
requires-python = ">=3.10, <3.13" 
readme = "README.rst"
dependencies = [
    "numpy~=1.26",
    "pandas~=2.2",
    "ruamel-yaml~=0.18.6",
    "tables~=3.10",
    "matplotlib~=3.10",
    "opencv-python-headless~=4.9",
    "scipy~=1.12",
    "ipympl~=0.9.3",
    "pyarrow~=17.0",
    "tqdm~=4.66",
    "pint-pandas~=0.5",
    "pandas-stubs~=2.2",
    "joblib~=1.4.2",
]

[project.optional-dependencies]
all = ["physbeh[docs,test,dev]"]
docs = [
    "numpydoc~=1.8.0",
    "sphinx~=8.0",
    "sphinx-copybutton~=0.5",
    "sphinx-design~=0.5",
    "pydata-sphinx-theme~=0.14",
]
test = [
    "pytest-cov>=6.0.0",
    "pytest~=8.3.4",
]
dev = [
    "ipykernel~=6.29.3",
    "ruff~=0.3.0",
    "pre-commit",
]

[tool.ruff]
# Always generate Python 3.10-compatible code.
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
# Enable the pycodestyle error and warnings (`E`, `W`) rules, Pyflakes (`F`) rules,
# McCabe complexity (`C901`) rule, isort (`I`) rules for importing, pyupgrade (`UP`)
# rules.
select = ["E", "F", "W", "I", "UP"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.numpydoc_validation]
exclude = [ # don't report on objects that match any of these regex
    '\.__init__$',
    # Ignore anything that's private (e.g., starts with _)
    '\._.*$',
]
checks = [
    "all",  # report on all checks, except the below
    "GL01",
    "ES01",
    "SA01",
    "EX01",
]
numpydoc_validation_checks = ["all", "GL01", "ES01", "SA01", "EX01"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
